@@ -63,6 +63,8 @@ void lcd_outdezNAtt(uint8_t x,uint8_t y,int32_t val,uint8_t mode,int8_t len);
 //extern void lcd_outdezAtt(unsigned char x,unsigned char y,int16_t val,uint8_t mode);
 extern void lcd_outdez(unsigned char x,unsigned char y,int16_t val);
 
+extern void lcd_hbar( uint8_t x, uint8_t y, uint8_t w, uint8_t h, uint8_t percent ) ;
+extern void lcd_rect(uint8_t x, uint8_t y, uint8_t w, uint8_t h ) ;
 extern void lcd_plot(unsigned char x,unsigned char y);
 extern void lcd_hline(unsigned char x,unsigned char y, signed char w);
 extern void lcd_hlineStip(unsigned char x,unsigned char y, signed char w,uint8_t pat);
